Added updated resume/skills/logos java, php

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
             <div class="swiper-slide"><img src="./assets/img/technology-logo/postgresql.png" class="img-fluid" alt="Postgresql" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/mongodb.png" class="img-fluid" alt="MongoDB" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/react.png" class="img-fluid" alt="React" height="100"></div>
-            <!-- <div class="swiper-slide"><img src="https://cdn.jsdelivr.net/npm/programming-languages-logos/src/sql/sql.png" class="img-fluid" alt="" height="100"></div> -->
-            <!-- <div class="swiper-slide"><img src="https://cdn.jsdelivr.net/npm/programming-languages-logos/src/scss/scss.png" class="img-fluid" alt="" height="100"></div> -->
+            <div class="swiper-slide"><img src="./assets/img/technology-logo/java.png" class="img-fluid" alt="Java" height="100"></div>
+            <div class="swiper-slide"><img src="./assets/img/technology-logo/php.png" class="img-fluid" alt="PHP" height="100"></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
