Added React Chat App project, added to portfolio section, also updated descriptions for portfolio projects. Lastly removed uppercase text transformation in css for portfolio

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
+              <li data-filter=".filter-game">Game</li>
               <!-- <li data-filter=".filter-card">Card</li> -->
               <li data-filter=".filter-web">Web</li>
             </ul>
@@ -327,14 +327,15 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-game">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-tamagotchi.png" class="img-fluid" alt="Project Tamagotchi">
               <div class="portfolio-info">
                 <h4>Project Tamagotchi</h4>
-                <!-- <p>Inspired by the 90's fad Tamagotchi, the goal of the game is to keep the pet healthy and alive. The game features a retro video game aesthetic, animations, sound effects, and music. Built utilizing HTML, CSS, JavaScript, Node, MongoDB / Mongoose, Express, and EJS.</p> -->
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/project-tamagotchi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project Tamagotchi"><i class="ri-zoom-in-line"></i></a>
+                  <a href="assets/img/portfolio/project-tamagotchi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                  title="Project Tamagotchi, Inspired by the 90's fad Tamagotchi, the goal of the game is to keep the pet healthy and alive. The game features a retro video game aesthetic, pet naming/evolution, responsive status meters, event/status triggered background music, sound effect feedback, animation feedback, and responsive design. Built utilizing HTML, CSS, JavaScript, Node, MongoDB / Mongoose, Express, and EJS.">
+                  <i class="ri-zoom-in-line"></i></a>
                   <!-- REVIEW: Consider different links? (1) Modal with details? (2) Details page link (3) External Link to actual app -->
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                   <a href="https://quincyp.github.io/project-tamagotchi/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
@@ -345,13 +346,17 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-wayfarer.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/react-chat-app-cover.png" class="img-fluid" alt="React Chat App">
               <div class="portfolio-info">
-                <h4>Project Wayfarer</h4>
-                <!-- <p>A travel blog/review site. Famous, popular, and remote locations are available to select and interact with socially. The site features user login authentication, email verification, profile setup/picture upload, and full CRUD functionality for user posts. Built utilizing HTML, CSS, Python, Django, SQL / PostgresQL.</p> -->
+                <h4>React Chat Application</h4>
+                <p>Login Using</p>
+                <p>Username: guest</p>
+                <p>Password: demo</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/project-wayfarer.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project Wayfarer"><i class="ri-zoom-in-line"></i></a>
-                  <a href="https://wayfarer-119.herokuapp.com/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/react-chat-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="React built Chat App. Key Technologies: React Hooks, Props, JavaScript, CSS, Sockets, Auth, Rest APIs, ChatEngine. Key Features: live chat, user online indicator, user last-read receipts, photo upload, responsive design.">
+                  <i class="ri-zoom-in-line"></i></a>
+                  <a href="https://quincy-react-chat-app.netlify.app/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -362,13 +367,29 @@
               <img src="assets/img/portfolio/project-mediahub.png" class="img-fluid" alt="Project Media Hub">
               <div class="portfolio-info">
                 <h4>Project Media Hub</h4>
-                <!-- <p>A media hub comment/review/social site. The site features user login authentication, profile creation, full CRUD functionality of movies and comments. Utilizing The Movie Database API user will automatically get pages generated with Movie Titles, Images, Descriptions, Year, etc. to provide a space to look up media and review/discuss about media/movies.</p> -->
-                <p>Login Using:</p>
+                <p>Login Using</p>
                 <p>Username: demo_user@gmail.com</p>
                 <p>Password: DemoUser1!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/project-mediahub.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project Media Hub"><i class="ri-zoom-in-line"></i></a>
+                  <a href="assets/img/portfolio/project-mediahub.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                  title="Project Media Hub, a movie social review site. Key Technologies: HTML, CSS, JavaScript, Mongoose, Express, NodeJS. Key Features: Users / Login Authentication, profile creation, full CRUD functionality for movies and comments, responsive design, TheMovideDatabase API for auto completion of details such as Movie Titles, Images, Descriptions, Year, Thumbnails, etc.">
+                  <i class="ri-zoom-in-line"></i></a>
                   <a href="https://project-mediahub.herokuapp.com/movies/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-wayfarer.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Project Wayfarer</h4>        
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/project-wayfarer.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Project Wayfarer, a travel blog/review site built to select and interact with socially per client wireframe/specifications. Key Technologies: HTML, CSS, Python, Django, SQL / PostgreSQL. Key Features: Users/Login Authentication, email verification, profile setup/picture upload, and full CRUD functionality.">
+                  <i class="ri-zoom-in-line"></i></a>
+                  <a href="https://wayfarer-119.herokuapp.com/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
