Added parallax video background, added button to view featured project live

--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
   </header>
 
   <!-- ======= Hero Section ======= -->
+  
   <section id="hero" class="d-flex align-items-center justify-content-center">
+    <div class="ParallaxVideo">
+      <video autoplay muted loop>
+        <source src="./assets/video.mp4" type="video/mp4">
+        Any alternate text.
+      </video>
+    </div>
     <div class="container" data-aos="fade-up">
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
@@ -243,7 +250,7 @@
     </section>
 
     <!-- ======= Featured Project Section ======= -->
-    <section id="featured" class="features mt-5">
+    <section id="featured" class="features">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -302,8 +309,26 @@
           </div>
         </div>
 
+        <div class="row mt-5">
+          <div class="col text-center">
+          <a class="minimal-btn" href="http://community-resources.herokuapp.com" target="_blank">View Project Community</a>
+          </div>
+        </div>
+
       </div>
     </section>
+
+    <!-- ======= Project Call To Action Section ======= -->
+    <!-- <section id="resume" class="cta">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="text-center">
+          <h1>View The Project</h1>
+          <a class="cta-btn" href="http://community-resources.herokuapp.com" target="_blank">View Project</a>
+        </div>
+
+      </div>
+    </section> -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
