Added fade in animation to view project button

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
         <div class="row mt-5">
           <div class="col text-center">
-          <a class="minimal-btn" href="http://community-resources.herokuapp.com" target="_blank">View Project Community</a>
+          <a class="minimal-btn" href="http://community-resources.herokuapp.com" target="_blank" data-aos="zoom-in" data-aos-delay="100">View Project Community</a>
           </div>
         </div>
 
