Edited titles for projects and added transition on hover for project community button

--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-tamagotchi.png" class="img-fluid" alt="Project Tamagotchi">
               <div class="portfolio-info">
-                <h4>Project Tamagotchi</h4>
+                <h4>Tamagotchi Inspired Game</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-tamagotchi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
-                  title="Project Tamagotchi, Inspired by the 90's fad Tamagotchi, the goal of the game is to keep the pet healthy and alive. The game features a retro video game aesthetic, pet naming/evolution, responsive status meters, event/status triggered background music, sound effect feedback, animation feedback, and responsive design. Built utilizing HTML, CSS, JavaScript, Node, MongoDB / Mongoose, Express, and EJS.">
+                  title="Project Tamagotchi, Inspired by the 90's fad Tamagotchi, the goal of the game is to keep the pet healthy and alive. The game features a retro video game aesthetic, pet naming/evolution, responsive status meters, event/status triggered background music, sound effect feedback, animation feedback, and responsive design. Built utilizing HTML, CSS, JavaScript.">
                   <i class="ri-zoom-in-line"></i></a>
                   <!-- REVIEW: Consider different links? (1) Modal with details? (2) Details page link (3) External Link to actual app -->
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
@@ -391,13 +391,13 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-mediahub-cover.png" class="img-fluid" alt="Project Media Hub">
               <div class="portfolio-info">
-                <h4>Project Media Hub</h4>
+                <h4>Media Hub Application</h4>
                 <p>Login Using</p>
                 <p>Username: demo_user@gmail.com</p>
                 <p>Password: DemoUser1!</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-mediahub.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
-                  title="Project Media Hub, a movie social review site. Key Technologies: HTML, CSS, JavaScript, Mongoose, Express, NodeJS. Key Features: Users / Login Authentication, profile creation, full CRUD functionality for movies and comments, responsive design, TheMovideDatabase API for auto completion of details such as Movie Titles, Images, Descriptions, Year, Thumbnails, etc.">
+                  title="Project Media Hub, a movie social review site. Key Technologies: HTML, CSS, JavaScript, NodeJS, MongoDB / Mongoose, Express, EJS. Key Features: Users / Login Authentication, profile creation, full CRUD functionality for movies and comments, responsive design, TheMovideDatabase API for auto completion of details such as Movie Titles, Images, Descriptions, Year, Thumbnails, etc.">
                   <i class="ri-zoom-in-line"></i></a>
                   <a href="https://project-mediahub.herokuapp.com/movies/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -409,7 +409,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-wayfarer.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Project Wayfarer</h4>        
+                <h4>Wayfarer Travel Application</h4>        
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-wayfarer.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Project Wayfarer, a travel blog/review site built to select and interact with socially per client wireframe/specifications. Key Technologies: HTML, CSS, Python, Django, SQL / PostgreSQL. Key Features: Users/Login Authentication, email verification, profile setup/picture upload, and full CRUD functionality.">
