Added NextJS and React built Crypto Tracker to portfolio

--- a/index.html
+++ b/index.html
@@ -352,6 +352,24 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/nextjs-crypto-cover.png" class="img-fluid" alt="Project Tamagotchi">
+              <div class="portfolio-info">
+                <h4>Crypto Tracker Application</h4>
+                <p>Built Using: NextJS & React</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/nextjs-crypto.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                  title="NextJS & React built crypto tracker. Key Technologies: React Hooks, Props, NextJS, JavaScript, CSS, CoinGecko API. Key Features: top list/scaleable current crypto data with logic, live search, responsive design, individual crypto pages with resources linking to crypto homepage and subreddit for more info.">
+                  <i class="ri-zoom-in-line"></i></a>
+                  <a href="https://quincy-nextjs-crypto-tracker.netlify.app/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-game">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-tamagotchi.png" class="img-fluid" alt="Project Tamagotchi">
@@ -371,15 +389,15 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/react-chat-app-cover.png" class="img-fluid" alt="React Chat App">
+              <img src="assets/img/portfolio/react-chat-app-cover.png" class="img-fluid" alt="React Live Chat App">
               <div class="portfolio-info">
-                <h4>React Chat Application</h4>
+                <h4>React Live Chat Application</h4>
                 <p>Login Using</p>
                 <p>Username: guest</p>
                 <p>Password: demo</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/react-chat-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="React built Chat App. Key Technologies: React Hooks, Props, JavaScript, CSS, Sockets, Auth, Rest APIs, ChatEngine. Key Features: live chat, user online indicator, user last-read receipts, photo upload, responsive design.">
+                  title="React built Live Chat App. Key Technologies: React Hooks, Props, JavaScript, CSS, Sockets, Auth, Rest APIs, ChatEngine. Key Features: live chat, user online indicator, user last-read receipts, photo upload, responsive design.">
                   <i class="ri-zoom-in-line"></i></a>
                   <a href="https://quincy-react-chat-app.netlify.app/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
