Added github links to portfolio items

--- a/index.html
+++ b/index.html
@@ -361,8 +361,9 @@
                 <p>Built Using: NextJS & React</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/nextjs-crypto.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
-                  title="NextJS & React built crypto tracker. Key Technologies: React Hooks, Props, NextJS, JavaScript, CSS, CoinGecko API. Key Features: top list/scaleable current crypto data with logic, live search, responsive design, individual crypto pages with resources linking to crypto homepage and subreddit for more info.">
+                  title="NextJS & React built crypto tracker. Key Technologies: React Hooks, Props, NextJS, JavaScript, CSS, CoinGecko API. Key Features: Scaleable current crypto data with logic, live search bar, responsive design/data, individual crypto pages with resources linking to crypto homepage and subreddit for more info.">
                   <i class="ri-zoom-in-line"></i></a>
+                  <a href="https://github.com/quincyp/nextjs-crypto" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
                   <a href="https://quincy-nextjs-crypto-tracker.netlify.app/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -379,8 +380,7 @@
                   <a href="assets/img/portfolio/project-tamagotchi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
                   title="Project Tamagotchi, Inspired by the 90's fad Tamagotchi, the goal of the game is to keep the pet healthy and alive. The game features a retro video game aesthetic, pet naming/evolution, responsive status meters, event/status triggered background music, sound effect feedback, animation feedback, and responsive design. Built utilizing HTML, CSS, JavaScript.">
                   <i class="ri-zoom-in-line"></i></a>
-                  <!-- REVIEW: Consider different links? (1) Modal with details? (2) Details page link (3) External Link to actual app -->
-                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+                  <a href="https://github.com/quincyp/project-tamagotchi" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
                   <a href="https://quincyp.github.io/project-tamagotchi/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -399,6 +399,7 @@
                   <a href="assets/img/portfolio/react-chat-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="React built Live Chat App. Key Technologies: React Hooks, Props, JavaScript, CSS, Sockets, Auth, Rest APIs, ChatEngine. Key Features: live chat, user online indicator, user last-read receipts, photo upload, responsive design.">
                   <i class="ri-zoom-in-line"></i></a>
+                  <a href="https://github.com/quincyp/react-chat-app" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
                   <a href="https://quincy-react-chat-app.netlify.app/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -417,6 +418,7 @@
                   <a href="assets/img/portfolio/project-mediahub.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
                   title="Project Media Hub, a movie social review site. Key Technologies: HTML, CSS, JavaScript, NodeJS, MongoDB / Mongoose, Express, EJS. Key Features: Users / Login Authentication, profile creation, full CRUD functionality for movies and comments, responsive design, TheMovideDatabase API for auto completion of details such as Movie Titles, Images, Descriptions, Year, Thumbnails, etc.">
                   <i class="ri-zoom-in-line"></i></a>
+                  <a href="https://github.com/quincyp/project-mediahub" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
                   <a href="https://project-mediahub.herokuapp.com/movies/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -432,6 +434,7 @@
                   <a href="assets/img/portfolio/project-wayfarer.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Project Wayfarer, a travel blog/review site built to select and interact with socially per client wireframe/specifications. Key Technologies: HTML, CSS, Python, Django, SQL / PostgreSQL. Key Features: Users/Login Authentication, email verification, profile setup/picture upload, and full CRUD functionality.">
                   <i class="ri-zoom-in-line"></i></a>
+                  <a href="https://github.com/quincyp/wayfarer-app" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
                   <a href="https://wayfarer-119.herokuapp.com/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
