Added covid-19 project pictures, pictures have not been formatted yet, may consider better cover image along with updating portfolio section

--- a/index.html
+++ b/index.html
@@ -355,7 +355,25 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/nextjs-crypto-cover.png" class="img-fluid" alt="Project Tamagotchi">
+              <img src="assets/img/portfolio/covid-tracker-cover.png" class="img-fluid" alt="COVID-19 Tracker">
+              <div class="portfolio-info">
+                <h4>COVID-19 Tracker Application</h4>
+                <p>Built Using: React</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/covid-tracker.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                  title="React built COVID-19 tracker. Key Technologies: React, Hooks, Props, ChartsJS, JavaScript, CSS, Mathdroid COVID-19 API. Key Features: Numerical and chart display, country selector for bar chart/specific details, responsive design/data.">
+                  <i class="ri-zoom-in-line"></i></a>
+                  <a href="https://github.com/quincyp/covid-tracker" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
+                  <a href="https://quincy-react-covid19-tracker.netlify.app/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/nextjs-crypto-cover.png" class="img-fluid" alt="Crypto Tracker">
               <div class="portfolio-info">
                 <h4>Crypto Tracker Application</h4>
                 <p>Built Using: NextJS & React</p>
