Corrected titles for portfolio icons aka description, github, live page

--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/covid-tracker.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
                   title="React built COVID-19 tracker. Key Technologies: React, Hooks, Props, ChartsJS, JavaScript, CSS, Mathdroid COVID-19 API. Key Features: Numerical and chart display, country selector for bar chart/specific details, responsive design/data.">
-                  <i class="ri-zoom-in-line"></i></a>
-                  <a href="https://github.com/quincyp/covid-tracker" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
-                  <a href="https://quincy-react-covid19-tracker.netlify.app/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
+                  <i class="ri-zoom-in-line" title="View Description"></i></a>
+                  <a href="https://github.com/quincyp/covid-tracker" target="_blank" title="View GitHub"><i class="bx bxl-github"></i></a>
+                  <a href="https://quincy-react-covid19-tracker.netlify.app/" target="_blank" title="View Live Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -380,9 +380,9 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/nextjs-crypto.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
                   title="NextJS & React built crypto tracker. Key Technologies: React Hooks, Props, NextJS, JavaScript, CSS, CoinGecko API. Key Features: Scaleable current crypto data with logic, live search bar, responsive design/data, individual crypto pages with resources linking to crypto homepage and subreddit for more info.">
-                  <i class="ri-zoom-in-line"></i></a>
-                  <a href="https://github.com/quincyp/nextjs-crypto" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
-                  <a href="https://quincy-nextjs-crypto-tracker.netlify.app/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
+                  <i class="ri-zoom-in-line" title="View Description"></i></a>
+                  <a href="https://github.com/quincyp/nextjs-crypto" target="_blank" title="View GitHub"><i class="bx bxl-github"></i></a>
+                  <a href="https://quincy-nextjs-crypto-tracker.netlify.app/" target="_blank" title="View Live Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -397,9 +397,9 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-tamagotchi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
                   title="Project Tamagotchi, Inspired by the 90's fad Tamagotchi, the goal of the game is to keep the pet healthy and alive. The game features a retro video game aesthetic, pet naming/evolution, responsive status meters, event/status triggered background music, sound effect feedback, animation feedback, and responsive design. Built utilizing HTML, CSS, JavaScript.">
-                  <i class="ri-zoom-in-line"></i></a>
-                  <a href="https://github.com/quincyp/project-tamagotchi" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
-                  <a href="https://quincyp.github.io/project-tamagotchi/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
+                  <i class="ri-zoom-in-line" title="View Description"></i></a>
+                  <a href="https://github.com/quincyp/project-tamagotchi" target="_blank" title="View GitHub"><i class="bx bxl-github"></i></a>
+                  <a href="https://quincyp.github.io/project-tamagotchi/" target="_blank" title="View Live Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -416,9 +416,9 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/react-chat-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="React built Live Chat App. Key Technologies: React Hooks, Props, JavaScript, CSS, Sockets, Auth, Rest APIs, ChatEngine. Key Features: live chat, user online indicator, user last-read receipts, photo upload, responsive design.">
-                  <i class="ri-zoom-in-line"></i></a>
-                  <a href="https://github.com/quincyp/react-chat-app" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
-                  <a href="https://quincy-react-chat-app.netlify.app/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                  <i class="ri-zoom-in-line" title="View Description"></i></a>
+                  <a href="https://github.com/quincyp/react-chat-app" target="_blank" title="View GitHub"><i class="bx bxl-github"></i></a>
+                  <a href="https://quincy-react-chat-app.netlify.app/" target="_blank" title="View Live Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -435,9 +435,9 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-mediahub.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
                   title="Project Media Hub, a movie social review site. Key Technologies: HTML, CSS, JavaScript, NodeJS, MongoDB / Mongoose, Express, EJS. Key Features: Users / Login Authentication, profile creation, full CRUD functionality for movies and comments, responsive design, TheMovideDatabase API for auto completion of details such as Movie Titles, Images, Descriptions, Year, Thumbnails, etc.">
-                  <i class="ri-zoom-in-line"></i></a>
-                  <a href="https://github.com/quincyp/project-mediahub" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
-                  <a href="https://project-mediahub.herokuapp.com/movies/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                  <i class="ri-zoom-in-line" title="View Description"></i></a>
+                  <a href="https://github.com/quincyp/project-mediahub" target="_blank" title="View GitHub"><i class="bx bxl-github"></i></a>
+                  <a href="https://project-mediahub.herokuapp.com/movies/" target="_blank" title="View Live Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -451,9 +451,9 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-wayfarer.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Project Wayfarer, a travel blog/review site built to select and interact with socially per client wireframe/specifications. Key Technologies: HTML, CSS, Python, Django, SQL / PostgreSQL. Key Features: Users/Login Authentication, email verification, profile setup/picture upload, and full CRUD functionality.">
-                  <i class="ri-zoom-in-line"></i></a>
-                  <a href="https://github.com/quincyp/wayfarer-app" target="_blank" title="Visit Page"><i class="bx bxl-github"></i></a>
-                  <a href="https://wayfarer-119.herokuapp.com/" target="_blank" title="Visit Page"><i class="bx bx-link"></i></a>
+                  <i class="ri-zoom-in-line" title="View Description"></i></a>
+                  <a href="https://github.com/quincyp/wayfarer-app" target="_blank" title="View GitHub"><i class="bx bxl-github"></i></a>
+                  <a href="https://wayfarer-119.herokuapp.com/" target="_blank" title="View Live Page"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
