Updated portfolio on-hover 'built using' text for quick overview of projects instead of view full description

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
               <img src="assets/img/portfolio/covid-tracker-cover.png" class="img-fluid" alt="COVID-19 Tracker">
               <div class="portfolio-info">
                 <h4>COVID-19 Tracker Application</h4>
-                <p>Built Using: React</p>
+                <p>Built Using: React, ChartJS, COVID-19 API</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/covid-tracker.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
                   title="React built COVID-19 tracker. Key Technologies: React, Hooks, Props, ChartsJS, JavaScript, CSS, Mathdroid COVID-19 API. Key Features: Numerical and chart display, country selector for bar chart/specific details, responsive design/data.">
@@ -376,7 +376,7 @@
               <img src="assets/img/portfolio/nextjs-crypto-cover.png" class="img-fluid" alt="Crypto Tracker">
               <div class="portfolio-info">
                 <h4>Crypto Tracker Application</h4>
-                <p>Built Using: NextJS & React</p>
+                <p>Built Using: NextJS, React, CoinGecko API</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/nextjs-crypto.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
                   title="NextJS & React built crypto tracker. Key Technologies: React Hooks, Props, NextJS, JavaScript, CSS, CoinGecko API. Key Features: Scaleable current crypto data with logic, live search bar, responsive design/data, individual crypto pages with resources linking to crypto homepage and subreddit for more info.">
@@ -388,28 +388,12 @@
             </div>
           </div>
 
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-game">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-tamagotchi.png" class="img-fluid" alt="Project Tamagotchi">
-              <div class="portfolio-info">
-                <h4>Tamagotchi Inspired Game</h4>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/project-tamagotchi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
-                  title="Project Tamagotchi, Inspired by the 90's fad Tamagotchi, the goal of the game is to keep the pet healthy and alive. The game features a retro video game aesthetic, pet naming/evolution, responsive status meters, event/status triggered background music, sound effect feedback, animation feedback, and responsive design. Built utilizing HTML, CSS, JavaScript.">
-                  <i class="ri-zoom-in-line" title="View Description"></i></a>
-                  <a href="https://github.com/quincyp/project-tamagotchi" target="_blank" title="View GitHub"><i class="bx bxl-github"></i></a>
-                  <a href="https://quincyp.github.io/project-tamagotchi/" target="_blank" title="View Live Page"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/react-chat-app-cover.png" class="img-fluid" alt="React Live Chat App">
               <div class="portfolio-info">
-                <h4>React Live Chat Application</h4>
+                <h4>Live Chat Application</h4>
+                <p>Built Using: React, Sockets, ChatEngine</p>
                 <p>Login Using</p>
                 <p>Username: guest</p>
                 <p>Password: demo</p>
@@ -429,6 +413,7 @@
               <img src="assets/img/portfolio/project-mediahub-cover.png" class="img-fluid" alt="Project Media Hub">
               <div class="portfolio-info">
                 <h4>Media Hub Application</h4>
+                <p>Built Using: MongoDB, Express, NodeJS, BcryptJS, TMDB API</p>
                 <p>Login Using</p>
                 <p>Username: demo_user@gmail.com</p>
                 <p>Password: DemoUser1!</p>
@@ -447,7 +432,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-wayfarer.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Wayfarer Travel Application</h4>        
+                <h4>Wayfarer Travel Application</h4>      
+                <p>Built Using: Django, PostgreSQL, AWS</p>  
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/project-wayfarer.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Project Wayfarer, a travel blog/review site built to select and interact with socially per client wireframe/specifications. Key Technologies: HTML, CSS, Python, Django, SQL / PostgreSQL. Key Features: Users/Login Authentication, email verification, profile setup/picture upload, and full CRUD functionality.">
@@ -458,6 +444,26 @@
               </div>
             </div>
           </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-game">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-tamagotchi.png" class="img-fluid" alt="Project Tamagotchi">
+              <div class="portfolio-info">
+                <h4>Tamagotchi Inspired Game</h4>
+                <p>Built Using: Javascript</p>
+                <p>My first project!</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/project-tamagotchi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                  title="Project Tamagotchi, Inspired by the 90's fad Tamagotchi, the goal of the game is to keep the pet healthy and alive. The game features a retro video game aesthetic, pet naming/evolution, responsive status meters, event/status triggered background music, sound effect feedback, animation feedback, and responsive design. Built utilizing HTML, CSS, JavaScript.">
+                  <i class="ri-zoom-in-line" title="View Description"></i></a>
+                  <a href="https://github.com/quincyp/project-tamagotchi" target="_blank" title="View GitHub"><i class="bx bxl-github"></i></a>
+                  <a href="https://quincyp.github.io/project-tamagotchi/" target="_blank" title="View Live Page"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         </div>
 
