--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             <div class="swiper-slide"><img src="./assets/img/technology-logo/postgresql.png" class="img-fluid" alt="Postgresql" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/mongodb.png" class="img-fluid" alt="MongoDB" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/react.png" class="img-fluid" alt="React" height="100"></div>
+            <div class="swiper-slide"><img src="./assets/img/technology-logo/graphql.png" class="img-fluid" alt="GraphQL" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/java.png" class="img-fluid" alt="Java" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/php.png" class="img-fluid" alt="PHP" height="100"></div>
           </div>
@@ -226,26 +227,6 @@
           </div> -->
 
         </div>
-
-        <!-- REVIEW: Skills list in resume -->
-        <!-- <div class="section-title mt-5">
-          <h2>Highlighted Languages/Technologies</h2>
-        </div>
-        <div class="clients-slider swiper-container">
-          <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/html.png" class="img-fluid" alt="Html"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/css.png" class="img-fluid" alt="Css"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/javascript.png" class="img-fluid" alt="Javascript"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/node-js.png" class="img-fluid" alt="node-js" height="100"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/python.png" class="img-fluid" alt="Python"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/django.png" class="img-fluid" alt="Django" height="100"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/postgresql.png" class="img-fluid" alt="Postgresql" height="100"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/mongodb.png" class="img-fluid" alt="MongoDB" height="100"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/react.png" class="img-fluid" alt="React" height="100"></div>
-          </div> -->
-          <!-- <div class="swiper-pagination"></div> -->
-        <!-- </div> -->
-
       </div>
     </section>
 
